--- a/noodle.html
+++ b/noodle.html
@@ -15,9 +15,6 @@
 <hr>
 
 <img src="image\005.jpg"><p>
-<img src="image\006.jpg height=240 width=320>
-<img src="image\007.jpg height=240 width=320>
-
 
 
 
@@ -29,7 +26,7 @@
 <a href="beef.html">連到牛肉麵</a>
 <a href="spring.html">連到陽春麵</a>
 <a href="noodle.html">連到拉麵</a>
-<a href="心得報告.html>心得</a>
+<a href="123.html>連到心得</a>
 
 </body>
 </html>
