--- a/roll.html
+++ b/roll.html
@@ -19,8 +19,6 @@
 臺灣北部地區家庭則多以在農曆年前時段包潤餅（同安作法）又稱之為「家庭尾牙」，同安則在上巳節食用；臺灣中南部地區（泉州三邑做法）則是在清明期間。<p>
 
 <img src="image\008.jpg"><p>
-<img src="image\009.jpg height=240 width=320>
-<img src="image\010.jpg height=240 width=320>
 
 
 
@@ -33,7 +31,7 @@
 <a href="beef.html">連到牛肉麵</a>
 <a href="spring.html">連到陽春麵</a>
 <a href="noodle.html">連到拉麵</a>
-<a href="心得報告.html>心得</a>
+<a href="123.html>連到心得</a>
 
 </body>
 </html>
