--- a/spring.html
+++ b/spring.html
@@ -18,8 +18,6 @@
 <hr>
 
 <img src="image\002.jpg"><p>
-<img src="image\003.jpg height=240 width=320>
-<img src="image\004.jpg height=240 width=320>
 
 
 
@@ -29,7 +27,7 @@
 <a href="beef.html">連到牛肉麵</a>
 <a href="noodle.html">連到拉麵</a>
 <a href="roll.html">連到春捲</a>
-<a href="心得.html">連到心得</a>
+<a href="123.html">連到心得</a>
 
 </body>
 </html>
