--- a/spring.html
+++ b/spring.html
@@ -24,7 +24,7 @@
 <p>
 
 
-<a href="beef.html">連到牛肉麵</a>
+<a href="index.html">連到牛肉麵</a>
 <a href="noodle.html">連到拉麵</a>
 <a href="roll.html">連到春捲</a>
 <a href="123.html">連到心得</a>
