--- a/noodle.html
+++ b/noodle.html
@@ -26,7 +26,7 @@
 <a href="beef.html">連到牛肉麵</a>
 <a href="spring.html">連到陽春麵</a>
 <a href="noodle.html">連到拉麵</a>
-<a href="123.html>連到心得</a>
+<a href="kkk.html>連到心得</a>
 
 </body>
 </html>
