--- a/noodle.html
+++ b/noodle.html
@@ -18,6 +18,7 @@
 
 
 
+<iframe width="560" height="315" src="https://www.youtube.com/watch?v=ql6vRcR_grw></iframe>
 <p>
 
 
@@ -26,7 +27,7 @@
 <a href="beef.html">連到牛肉麵</a>
 <a href="spring.html">連到陽春麵</a>
 <a href="noodle.html">連到拉麵</a>
-<a href="kkk.html>連到心得</a>
+<a href="kkk.html">連到心得</a>
 
 </body>
 </html>
